--- a/Logo/Logo.css
+++ b/Logo/Logo.css
@@ -13,6 +13,8 @@ body {
     width: 500px;
     height: 500px;
     background: url('Logo.svg');
-    transform: translate(-50%, -50%);
+    background-size: cover;
+    transform: translate(-50%, -50%) rotateX(45deg) rotateZ(-45deg);
+    transform-style: preserve-3d;
 
 }
