--- a/Logo/Logo.css
+++ b/Logo/Logo.css
@@ -17,8 +17,15 @@ body {
     transform: translate(-50%, -50%) rotateX(45deg) rotateZ(-45deg);
     transform-style: preserve-3d;
     background-color: black;
+    transition: 0.5s;
 
 }
+
+.logo:hover {
+    transform: translate(-50%, -50%) rotateX(0deg) rotateZ(0deg);
+}
+
+
 
 .logo:before {
     content: '';
@@ -29,9 +36,13 @@ body {
     left: 0;
     background: #ccc;
     transform-origin: top;
-    transform: skewX(-45deg) scale(1);
+    transform: skewX(-45deg) scaleY(1);
     transition: 0.5s;
 
+}
+
+.logo:hover:before {
+    transform: skewX(-45deg) scaleY(0);
 }
 
 .logo:after {
@@ -43,7 +54,13 @@ body {
     left: -50px;
     background: #999;
     transform-origin: left;
-    transform: skewY(-45deg) scale(1);
+    transform: skewY(-45deg) scaleX(1);
     transition: 0.5s;
 
+}
+
+.logo:hover:after {
+    top: 0;
+    left: 0;
+    transform: skewY(-45deg) scaleX(0);
 }
