--- a/Logo/Logo.css
+++ b/Logo/Logo.css
@@ -6,6 +6,12 @@ body {
 
 }
 
+section {
+    width: 100%;
+    height: 100vh;
+    background: radial-gradient(#01270e, #000);
+}
+
 .logo {
     position: absolute;
     top: 50%;
@@ -18,11 +24,14 @@ body {
     transform-style: preserve-3d;
     background-color: black;
     transition: 0.5s;
+    box-shadow: -50px 50px 80px rgba(0, 0, 0, 0.8), -80px 80px 250px rgba(0, 255, 0, 1);
 
 }
 
 .logo:hover {
     transform: translate(-50%, -50%) rotateX(0deg) rotateZ(0deg);
+    box-shadow: 0 20px 20px rgba(0, 0, 0, 0.5);
+
 }
 
 
@@ -34,7 +43,7 @@ body {
     position: absolute;
     bottom: -50px;
     left: 0;
-    background: #ccc;
+    background: linear-gradient(#1b1b1b, #9cca03);
     transform-origin: top;
     transform: skewX(-45deg) scaleY(1);
     transition: 0.5s;
@@ -52,7 +61,7 @@ body {
     position: absolute;
     top: 50px;
     left: -50px;
-    background: #999;
+    background: linear-gradient(to left, #1b1b1b, #9cca03);
     transform-origin: left;
     transform: skewY(-45deg) scaleX(1);
     transition: 0.5s;
