--- a/Logo/Logo.css
+++ b/Logo/Logo.css
@@ -25,12 +25,15 @@ section {
     background-color: black;
     transition: 0.5s;
     box-shadow: -50px 50px 80px rgba(0, 0, 0, 0.8), -80px 80px 250px rgba(0, 255, 0, 1);
+    animation: animate 2s linear infinite;
 
 }
 
 .logo:hover {
     transform: translate(-50%, -50%) rotateX(0deg) rotateZ(0deg);
     box-shadow: 0 20px 20px rgba(0, 0, 0, 0.5);
+    animation: none;
+
 
 }
 
@@ -72,4 +75,36 @@ section {
     top: 0;
     left: 0;
     transform: skewY(-45deg) scaleX(0);
+}
+
+@keyframes animate {
+    0% {
+        box-shadow: -50px 50px 80px rgba(0, 0, 0, 0.8), -80px 80px 250px rgba(0, 255, 0, 1);
+
+    }
+
+    20% {
+        box-shadow: -50px 50px 80px rgba(0, 0, 0, 0.8), -80px 80px 150px rgba(0, 255, 0, 1);
+
+    }
+
+    40% {
+        box-shadow: -50px 50px 80px rgba(0, 0, 0, 0.8), -80px 80px 200px rgba(0, 255, 0, 1);
+
+    }
+
+    60% {
+        box-shadow: -50px 50px 80px rgba(0, 0, 0, 0.8), -80px 80px 120px rgba(0, 255, 0, 1);
+
+    }
+
+    80% {
+        box-shadow: -50px 50px 80px rgba(0, 0, 0, 0.8), -80px 80px 190px rgba(0, 255, 0, 1);
+
+    }
+
+    0% {
+        box-shadow: -50px 50px 80px rgba(0, 0, 0, 0.8), -80px 80px 250px rgba(0, 255, 0, 1);
+
+    }
 }
