--- a/index.css
+++ b/index.css
@@ -3,6 +3,15 @@
 *::before,
 *::after {
     box-sizing: border-box;
+    
+}
+
+* {
+    outline: 1px solid red;
+}
+
+html {
+    font-family: sans-serif;
 }
 
 /* Remove default padding */
