added footer to the blog list page

--- a/Footer/Footer.css
+++ b/Footer/Footer.css
@@ -17,5 +17,8 @@
 
 .footer {
     grid-area: footer;
-    background-color: greenyellow;
-}
+    background-color: var(--Midnight);
+    color: white;
+    }
+
+ 
