--- a/index.css
+++ b/index.css
@@ -105,3 +105,12 @@ select {
 }
 
 
+
+:root {
+    --color1: #D3D3D9;
+    --color2: #030406;
+    --color3: #3C4457;
+    --color4: #BDB4C2;
+     --color5: #2852C0;
+    --color6: #98788B ;
+}
