--- a/index.css
+++ b/index.css
@@ -78,7 +78,7 @@ select {
     font: inherit;
 }
 
-/* Remove all animations and transitions for people that prefer not to see them */
+/* Remove all animations and transitions for people that prefer not to see them
 @media (prefers-reduced-motion: reduce) {
     * {
         animation-duration: 0.01ms !important;
@@ -86,7 +86,7 @@ select {
         transition-duration: 0.01ms !important;
         scroll-behavior: auto !important;
     }
-}
+} */
 
 #root {
     display: grid;
