--- a/index.css
+++ b/index.css
@@ -90,7 +90,7 @@ select {
 
 #root {
     display: grid;
-    grid-template-rows: 2rem auto 2rem;
+    grid-template-rows: 2rem auto 4rem;
     grid-template-areas: "header"
                          "main-area"
                          "footer";
@@ -102,6 +102,7 @@ select {
 
 .main-area {
     grid-area: main-area;
+    background-color: orange;
 }
 
 
