--- a/Signup/Signup.css
+++ b/Signup/Signup.css
@@ -14,3 +14,63 @@
     --MachaGreen: #384001;
     --GrassyGreen: #849609;
 }
+
+.form-card {
+    font-family: "Montserrat", "sans-serif"; 
+    display:flex;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
+    width: 100%;
+}
+
+.form {
+    display: flex;
+    flex-direction: column;
+    
+}
+
+.form label, .form input {
+    width: 100%;
+    padding: 0 0.5rem;
+    font-weight: bold;
+    
+}
+
+.form label {
+    display: block;
+    margin-bottom: 0.5rem;
+    
+}
+
+.form input {
+    border: none;
+    border-radius: 1rem;
+    margin-bottom: 1rem;
+    height: 1.5rem;
+    
+}
+
+.form input:focus {
+    background-color: var(--color5);
+    color: var(--color1);
+}
+
+.form input:focus, .form input:active {
+    outline: none;
+    
+}
+
+.form button {
+    font-weight: bold;
+    background-color: var(--color3);
+    color: var(--color1);
+    border: none;
+    transition: all 0.5s ease;
+}
+
+.form button:hover {
+    background-color: var(--color5);
+    color: var(--color2);
+}
+
