--- a/Blog Post/Blog Post.css
+++ b/Blog Post/Blog Post.css
@@ -37,3 +37,22 @@ text-align: justify;
 text-indent: 50px;
 line-height: 24px;
 }
+
+.comment__card {
+    margin: 2rem 0;
+    width: 70%;
+}
+
+.comment__heading h3{
+    font-size: 32px;
+    text-align: center;
+}
+
+.comment__message {     
+    margin-top: 64px;     
+}
+
+.comment__message textarea{
+    font-size: 20px;    
+    width: 100%;
+}
