added design colors

--- a/index.css
+++ b/index.css
@@ -117,6 +117,21 @@ select {
     --color4: #BDB4C2;
      --color5: #2852C0;
     --color6: #98788B ;
+
+    --Cadet-Blue: #51A3A3;
+    --Aztec-Gold: #CB904D;
+    --Deep-Space-Sparcle: #466362;
+    --Straw: #DFCC74;
+    --Medium-Spring-Bud: #C3E991;
+
+    --Charlston-Green: #2D2D2A;
+    --Honeydew: #F1F7EE;
+    --English-Green: #19535F;
+    --Eggshell: #EAF0CE;
+    --Sheldon-Blue: #7D98A1;
+
+    --Dark-Smoke: #707070;
+    --Red-Wine: #E92424;
 }
 
 /* @import url('https://fonts.googleapis.com/css?family=Montserrat&display=swap'); */
