updated blog title styling

--- a/Blog/Blog.css
+++ b/Blog/Blog.css
@@ -69,6 +69,14 @@
     height: 77px;
     width: 329px;
     background-color: gray;
+    overflow: hidden;
+}
+
+.blog-title h3 {
+    font-size: 28px;
+    line-height: 32px;
+    padding: 0.5rem 0.5rem;
+
 }
 
 .blog-content {
