--- a/Blog/Blog.css
+++ b/Blog/Blog.css
@@ -141,23 +141,48 @@
 
 .blog-status {
     display: flex;
-    justify-content: space-between;
+    justify-content: start;
     height: 24px;
     width: 329px;
-    background-color: pink;
+    padding-left: 0.5rem;
 }
 
 .blog-status .likes, .blog-status .comments {
     display: flex;
-    width: 66px;
+    width: 150px;
     height: 24px;
+    justify-content: start;
+    align-items: center;
+
 }
 
-.blog-date svg {
-    
-    height: 100%;
+.blog-status h3 {
+    height: 24px;
+    padding-left: 1rem;
+}
+
+.blog-status__likes h3 {
+    color: var(--Aztec-Gold);
+}
+
+.blog-status__comments h3 {
+    color: var(--Medium-Spring-Bud);
 }
 
 .blog-status__likes-icon, .blog-status__comments-icon {
-    height: 100%;
+    height: 24px;
+    width: 24px;
+}
+
+.blog-status__likes-icon svg{
+    fill: var(--Aztec-Gold);
+}
+
+.blog-status__comments-icon {
+    fill: var(--Medium-Spring-Bud);
+}
+
+
+.blogs__popular {
+    outline: none;
 }
