--- a/Blog/Blog.css
+++ b/Blog/Blog.css
@@ -37,6 +37,7 @@
     justify-content: space-around;
     align-items: center;
     width: 100%;
+    height: 518px;
     
 }
 
@@ -67,38 +68,37 @@
 }
 
 .blog-title {
-    height: 77px;
-    width: 329px;
-     
+    height: 70px;
+    width: 313px;     
     overflow: hidden;
+    margin: 8px;
 }
 
 .blog-title h3 {
     font-size: 28px;
-    line-height: 32px;
-    padding: 0.5rem 0.5rem;
+    line-height: 37px;    
     color: var(--English-Green);
 
 }
 
 .blog-content {
     height: 102px;
-    width: 329px;
-     
+    width: 313px;     
     overflow: hidden;
+    margin: 8px;
 }
 
 .blog-content p{
     font-family: "Montserrat";
-    padding: 0.3rem 0.5rem;
     text-align: justify;
-    line-height: 24px;
+    line-height: 25.5px;
     color: var(--Charlston-Green);
 }
 
 .blog-author {
     height: 24px;
-    width: 329px;
+    width: 313px;
+    margin: 8px;
      
 }
 .blog-author h3 {
@@ -106,18 +106,16 @@
     font-style: italic;
     font-size: 20px;
     line-height: 24px;
-    padding-left: 0.5rem;
 }
 
 .blog-date {
     display: flex;
-    height: 27px;
-    width: 329px;
-    padding-left: 0.5rem;
+    height: 24px;
+    width: 313px;
+    margin: 8px;
 }
 .blog-date__icon {
-    height: 100%;
-    
+    height: 100%;    
 }
 
 
@@ -143,8 +141,8 @@
     display: flex;
     justify-content: start;
     height: 24px;
-    width: 329px;
-    padding-left: 0.5rem;
+    width: 313px;
+    margin: 8px;
 }
 
 .blog-status .likes, .blog-status .comments {
@@ -178,11 +176,8 @@
     fill: var(--Aztec-Gold);
 }
 
-.blog-status__comments-icon {
+.blog-status__comments-icon svg{
     fill: var(--Medium-Spring-Bud);
 }
 
 
-.blogs__popular {
-    outline: none;
-}
