--- a/Signup/Signup.css
+++ b/Signup/Signup.css
@@ -1,76 +1,21 @@
 :root {
-    /*Veneziano Coffee Roasters*/
-    --Cream: #F6F4F2;
-    --Teal: #425664;
-    --Mocha: #C6AD8F;
-    /*Slumber*/
-    --Midnight: #051622;
-    --Ocean: #1BA098;
-    --Cappuccino: #DEB992;
-    /*Copie de Copie de eet*/
-    --AshFall: #8C8474;
-    --VolcanicRock: #272425;
-    --CreamyWhite: #F3F5D8;
-    --MachaGreen: #384001;
-    --GrassyGreen: #849609;
+    --Cadet-Blue: #51A3A3;
+    --Aztec-Gold: #CB904D;
+    --Deep-Space-Sparcle: #466362;
+    --Straw: #DFCC74;
+    --Medium-Spring-Bud: #C3E991;
+
+    --Charlston-Green: #2D2D2A;
+    --Honeydew: #F1F7EE;
+    --English-Green: #19535F;
+    --Eggshell: #EAF0CE;
+    --Sheldon-Blue: #7D98A1;
+
+    --Dark-Smoke: #707070;
+    --Red-Wine: #E92424;
 }
 
-.form-card {
-    font-family: "Montserrat", "sans-serif"; 
-    display:flex;
-    justify-content: center;
-    align-items: center;
-    height: 100%;
-    width: 100%;
-}
 
-.form {
-    display: flex;
-    flex-direction: column;
-    
-}
 
-.form label, .form input {
-    width: 100%;
-    padding: 0 0.5rem;
-    font-weight: bold;
-    
-}
 
-.form label {
-    display: block;
-    margin-bottom: 0.5rem;
-    
-}
-
-.form input {
-    border: none;
-    border-radius: 1rem;
-    margin-bottom: 1rem;
-    height: 1.5rem;
-    
-}
-
-.form input:focus {
-    background-color: var(--color5);
-    color: var(--color1);
-}
-
-.form input:focus, .form input:active {
-    outline: none;
-    
-}
-
-.form button {
-    font-weight: bold;
-    background-color: var(--color3);
-    color: var(--color1);
-    border: none;
-    transition: all 0.5s ease;
-}
-
-.form button:hover {
-    background-color: var(--color5);
-    color: var(--color2);
-}
 
