--- a/Signup/Signup.css
+++ b/Signup/Signup.css
@@ -24,7 +24,7 @@
 }
 
 .form-card {
-    height: 446px;
+    height: 440px;
     width: 414px;
     background-color: var(--Eggshell);
     display: flex;
@@ -38,32 +38,40 @@
 .form-card__head {
     width: 100%;
     height: 82px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .form-card__head h2 {
     font-size: 28px;
     text-align: center;
     color: var(--Aztec-Gold);
+    line-height: 34px;
 }
 
 .form-card__body {
     width: 100%;
-    height: 298px;
+    height: 358px;
 }
 
 .form-card__body .form {
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: start;
     align-items: center;
+    height: 358px;
 }
 
 .form-inputs {
-    height: 66px;
+    height: 41px;
     width: 334px;
     display: flex;
     flex-direction: column;
-    justify-self: start;
+    justify-content: space-between;
+    margin-bottom: 8px;
+    
+
 }
 
 .form-inputs label {
@@ -78,6 +86,7 @@
     height: 20px;
     border: 1px solid var(--Dark-Smoke);
     font-size: 14px;
+    
 }
 
 .form-inputs input:focus {
@@ -88,18 +97,24 @@
 .form-button {
     display: flex;
     justify-content: flex-end;
-    width: 500px;
+    width: 334px;
+    height: 24px;
+    margin-top: 16px;
 
 }
 
 .form-card__body .form .button {
-    width: 160px;
-    height: 40px;
+    width: 116px;
+    height: 24px;
+    line-height: 24px;
     background-color: var(--Cadet-Blue);
     border: none;
-    border-radius: 10px;
+    border-radius: 5px;
     border: 1px solid var(--Dark-Smoke);
+    font-size: 16px;
     font-weight: bold;
+    color: white;
+    padding: 0px
 }
 
 
