--- a/Login/Login.css
+++ b/Login/Login.css
@@ -24,57 +24,69 @@
 }
 
 .form-card {
-    height: 300px;
-    width: 600px;
+    height: 244px;
+    width: 414px;
     background-color: var(--Eggshell);
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    border-radius: 30px;
+    border-radius: 20px;
     border: 1px solid var(--Dark-Smoke);
 }
 
 .form-card__head {
     width: 100%;
+    height: 82px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .form-card__head h2 {
-    font-size: 32px;
+    font-size: 28px;
     text-align: center;
     color: var(--Aztec-Gold);
+    line-height: 34px;
 }
 
 .form-card__body {
     width: 100%;
+    height: 162px;
 }
 
 .form-card__body .form {
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: start;
     align-items: center;
+    height: 162px;
 }
 
 .form-inputs {
-    height: 66px;
-    width: 500px;
+    height: 41px;
+    width: 334px;
     display: flex;
     flex-direction: column;
-    justify-self: start;
+    justify-content: space-between;
+    margin-bottom: 8px;
+    
+
 }
 
 .form-inputs label {
-    font-size: 20px;
+    font-size: 16px;
     color: var(--Sheldon-Blue);
-    line-height: 24px;
+    line-height: 19px;
+    height: 19px;
     width: 100%;
 }
 
 .form-inputs input {
-    height: 24px;
-    border-radius: 0.3rem;
+    height: 20px;
     border: 1px solid var(--Dark-Smoke);
+    font-size: 14px;
+    
 }
 
 .form-inputs input:focus {
@@ -85,18 +97,23 @@
 .form-button {
     display: flex;
     justify-content: flex-end;
-    width: 500px;
+    width: 334px;
+    height: 24px;
+    margin-top: 16px;
 
 }
 
 .form-card__body .form .button {
-    width: 160px;
-    height: 40px;
+    width: 116px;
+    height: 24px;
+    line-height: 24px;
     background-color: var(--Cadet-Blue);
     border: none;
-    border-radius: 10px;
+    border-radius: 5px;
     border: 1px solid var(--Dark-Smoke);
-    font-weight: bold;
+    font-size: 16px;
+    color: white;
+    padding: 0px
 }
 
 
