--- a/Blog/Blog.css
+++ b/Blog/Blog.css
@@ -17,6 +17,7 @@
     flex-direction: column;
     justify-content: space-between;
     align-items: center;
+    width: 80%;
 }
 
 .blogs__popular, .blogs__newposts {
