--- a/Blog Post/Blog Post.css
+++ b/Blog Post/Blog Post.css
@@ -19,8 +19,8 @@
     align-items: center;
 }
 
-.blog__card {
-    width: 70%;
+.blog-post__card {
+    width: 80%;
 }
 
 .blog-post__title p, .blog-post__author p{
@@ -36,6 +36,33 @@
 text-align: justify;
 text-indent: 50px;
 line-height: 24px;
+}
+
+.blog-date {
+    display: flex;
+    height: 24px;
+    width: 313px;
+    margin: 8px;
+}
+.blog-date__icon {
+    height: 100%;    
+}
+
+
+
+.blog-date__complete-date h3{
+    color: var(--English-Green);
+    font-family: "Montserrat";
+    font-size: 20px;
+    line-height: 27px;
+    padding-left: 0.3rem;
+}
+
+
+
+.blog-date svg {
+    fill: var(--English-Green);
+    height: 100%;
 }
 
 .comment__card {
