--- a/Blog Post/Blog Post.css
+++ b/Blog Post/Blog Post.css
@@ -23,12 +23,12 @@
     width: 80%;
 }
 
-.blog-post__title p, .blog-post__author p{
+.blog-post__title h2, .blog-post__author h3{
     text-align: center;
     margin: 5vh auto;
 }
 
-.blog-post__title p {
+.blog-post__title h2 {
     width: 60%;
     text-align: center;
 }
@@ -66,6 +66,9 @@ line-height: 24px;
 
 
 
+
+
+
 .comment__card {
     margin: 2rem 0;
     width: 70%;
@@ -83,4 +86,50 @@ line-height: 24px;
 .comment__message textarea{
     font-size: 20px;    
     width: 100%;
+}
+
+
+
+
+.blog-status {
+    display: flex;
+    justify-content: start;
+    height: 24px;
+    width: 313px;
+    margin: 8px;
+}
+
+.blog-status .likes, .blog-status .comments {
+    display: flex;
+    width: 150px;
+    height: 24px;
+    justify-content: start;
+    align-items: center;
+
+}
+
+.blog-status h3 {
+    height: 24px;
+    padding-left: 1rem;
+}
+
+.blog-status__likes h3 {
+    color: var(--Aztec-Gold);
+}
+
+.blog-status__comments h3 {
+    color: var(--Medium-Spring-Bud);
+}
+
+.blog-status__likes-icon, .blog-status__comments-icon {
+    height: 24px;
+    width: 24px;
+}
+
+.blog-status__likes-icon svg{
+    fill: var(--Aztec-Gold);
+}
+
+.blog-status__comments-icon svg{
+    fill: var(--Medium-Spring-Bud);
 }
