--- a/Blog Post/Blog Post.css
+++ b/Blog Post/Blog Post.css
@@ -91,15 +91,16 @@ line-height: 24px;
 
 
 
-.blog-status {
+.blog-post-status {
     display: flex;
-    justify-content: start;
-    height: 24px;
-    width: 313px;
-    margin: 8px;
+    flex-direction: column;
+    justify-content: space-between;
+    height: 64px;
+    width: 100%;
+    margin-top: 16px;
 }
 
-.blog-status .likes, .blog-status .comments {
+.blog-post-status .likes, .blog-post-status .comments {
     display: flex;
     width: 150px;
     height: 24px;
@@ -108,28 +109,29 @@ line-height: 24px;
 
 }
 
-.blog-status h3 {
+.blog-post-status h3 {
     height: 24px;
     padding-left: 1rem;
 }
 
-.blog-status__likes h3 {
+.blog-post-status h3 {
     color: var(--Aztec-Gold);
 }
 
-.blog-status__comments h3 {
+.blog-post-status__comments h3 {
     color: var(--Medium-Spring-Bud);
 }
 
-.blog-status__likes-icon, .blog-status__comments-icon {
+.blog-post-status__likes-icon, .blog-post-status__comments-icon {
     height: 24px;
     width: 24px;
+    
 }
 
-.blog-status__likes-icon svg{
+.blog-post-status__likes-icon svg{
     fill: var(--Aztec-Gold);
 }
 
-.blog-status__comments-icon svg{
+.blog-post-status__comments-icon svg{
     fill: var(--Medium-Spring-Bud);
 }
