--- a/Blog Post/Blog Post.css
+++ b/Blog Post/Blog Post.css
@@ -69,12 +69,12 @@ line-height: 24px;
 
 
 
-.comment__card {
+.comments__card {
     margin: 2rem 0;
     width: 70%;
 }
 
-.comment__heading h3{
+.comments__heading h3{
     font-size: 32px;
     text-align: center;
 }
@@ -86,6 +86,21 @@ line-height: 24px;
 .comment__message textarea{
     font-size: 20px;    
     width: 100%;
+}
+
+.comment__add-comment {
+    margin-top: 20px;
+    display:flex;
+    flex-direction: row-reverse;
+}
+
+.comment__add-comment .button {
+    height: 50px;
+    width: 329px;
+    font-family: "Montserrat";
+    font-weight: bold;
+    border: 1px solid black;
+    border-radius: 10px;
 }
 
 
