--- a/Blog Post/Blog Post.css
+++ b/Blog Post/Blog Post.css
@@ -111,6 +111,26 @@ line-height: 24px;
     border-radius: 10px;
 }
 
+.comment-item__details {
+    display: flex;
+    justify-content: flex-end;
+}
+
+.comment-item__details div {
+    margin-left: 5rem;
+}
+
+.comment-author, .comment-date {
+display: flex;
+justify-content: center;
+}
+
+.comment-author__icon svg ,.comment-date__icon svg {
+    height: 24px;
+    width: 24px;
+}
+
+
 
 
 
