--- a/index.css
+++ b/index.css
@@ -6,10 +6,10 @@
     
 }
 
- * {
+ /* * {
     outline: 1px solid red;
     background-color: rgba(0,0,255,0.1);
-} 
+}  */
 
 html {
     font-family: "Montserrat", sans-serif;
