fixing user profile styling

--- a/User Profile/User Profile.css
+++ b/User Profile/User Profile.css
@@ -18,8 +18,9 @@
 .user-profile {
 	display: flex;
 	flex-direction: column;
-	justify-content: space-between;
+	justify-content: center;
 	align-items: center;
+	height: 100%;
 }
 
 .user-profile__content {
