--- a/User Profile/User Profile.css
+++ b/User Profile/User Profile.css
@@ -42,8 +42,21 @@
 	background-position: center;
 }
 
+.user-profile__info {
+	margin-top: 30px;
+}
+
+.user-profile__info__fullname {
+	margin-bottom: 20px;
+	height: 30px;
+	line-height: 30px;
+}
+
 .user-profile__info__detail-list {
+	margin-top: 50px;
 	display: flex;
 	width: 100%;
+	height: 60px;
 	justify-content: space-between;
+	align-items: center;
 }
