--- a/User Profile/User Profile.css
+++ b/User Profile/User Profile.css
@@ -28,8 +28,9 @@
 	flex-direction: column;
 	justify-content: center;
 	align-items: center;
+	background-color: var(--Eggshell);
 	width: 80%;
-	height: 100%;
+	height: 90%;
 }
 
 .user-profile__image {
@@ -50,12 +51,14 @@
 	margin-bottom: 20px;
 	height: 30px;
 	line-height: 30px;
+	color: var(--English-Green);
+	text-align: center;
 }
 
 .user-profile__info__detail-list {
 	margin-top: 50px;
 	display: flex;
-	width: 100%;
+	width: 336px;
 	height: 60px;
 	justify-content: space-between;
 	align-items: center;
