--- a/Header/Header.css
+++ b/Header/Header.css
@@ -1,22 +1,25 @@
 :root {
-    /*Veneziano Coffee Roasters*/
-    --Cream: #F6F4F2;
-    --Teal: #425664;
-    --Mocha: #C6AD8F;
-    /*Slumber*/
-    --Midnight: #051622;
-    --Ocean: #1BA098;
-    --Cappuccino: #DEB992;
-    /*Copie de Copie de eet*/
-    --AshFall: #8C8474;
-    --VolcanicRock: #272425;
-    --CreamyWhite: #F3F5D8;
-    --MachaGreen: #384001;
-    --GrassyGreen: #849609;
+	/*Veneziano Coffee Roasters*/
+	--Cream: #f6f4f2;
+	--Teal: #425664;
+	--Mocha: #c6ad8f;
+	/*Slumber*/
+	--Midnight: #051622;
+	--Ocean: #1ba098;
+	--Cappuccino: #deb992;
+	/*Copie de Copie de eet*/
+	--AshFall: #8c8474;
+	--VolcanicRock: #272425;
+	--CreamyWhite: #f3f5d8;
+	--MachaGreen: #384001;
+	--GrassyGreen: #849609;
 }
 
 .header {
-    background-color: var(--Teal);
-    height: 2rem;
-    grid-area: header;
+	background-color: var(--Teal);
+	height: 2rem;
+	grid-area: header;
+	width: 100vw;
+	display: flex;
+	justify-content: center;
 }
