--- a/Navigiation/Navigation.css
+++ b/Navigiation/Navigation.css
@@ -1,53 +1,49 @@
 :root {
-    /*Veneziano Coffee Roasters*/
-    --Cream: #F6F4F2;
-    --Teal: #425664;
-    --Mocha: #C6AD8F;
-    /*Slumber*/
-    --Midnight: #051622;
-    --Ocean: #1BA098;
-    --Cappuccino: #DEB992;
-    /*Copie de Copie de eet*/
-    --AshFall: #8C8474;
-    --VolcanicRock: #272425;
-    --CreamyWhite: #F3F5D8;
-    --MachaGreen: #384001;
-    --GrassyGreen: #849609;
+	/*Veneziano Coffee Roasters*/
+	--Cream: #f6f4f2;
+	--Teal: #425664;
+	--Mocha: #c6ad8f;
+	/*Slumber*/
+	--Midnight: #051622;
+	--Ocean: #1ba098;
+	--Cappuccino: #deb992;
+	/*Copie de Copie de eet*/
+	--AshFall: #8c8474;
+	--VolcanicRock: #272425;
+	--CreamyWhite: #f3f5d8;
+	--MachaGreen: #384001;
+	--GrassyGreen: #849609;
 }
 
 .main-navigation {
-    background-color: var(--English-Green);
-    display: flex;
-    justify-content: center;
-    
-    
-    
+	background-color: var(--English-Green);
+	width: 80%;
 }
-.main-navigation .nav-links{
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-    height: 32px;
+.main-navigation .nav-links {
+	display: flex;
+	justify-content: space-around;
+	align-items: center;
+	height: 32px;
 }
 
 .main-navigation .active {
-    color: var(--Aztec-Gold);
+	color: var(--Aztec-Gold);
 }
 
 .main-navigation .nav-link {
-    margin: 0 0.3rem;
+	margin: 0 0.3rem;
 }
 
-.main-navigation .nav-link a{
-    font-size: 20px;
+.main-navigation .nav-link a {
+	font-size: 20px;
 }
 
 .main-navigation .nav-link .active {
-    color: var(--Aztec-Gold);
+	color: var(--Aztec-Gold);
 }
 .main-navigation .nav-link-item {
-    text-decoration: none;
-    color: var(--color1);
-    font-size: 0.8rem;
-    font-weight: bold;
+	text-decoration: none;
+	color: var(--color1);
+	font-size: 0.8rem;
+	font-weight: bold;
 }
