--- a/index.css
+++ b/index.css
@@ -5,10 +5,10 @@
 	box-sizing: border-box;
 }
 
-/* * {
+* {
 	outline: 1px solid red;
 	background-color: rgba(0, 0, 255, 0.1);
-} */
+}
 
 html {
 	font-family: 'Montserrat', sans-serif;
