--- a/healthcheck.css
+++ b/healthcheck.css
@@ -2,49 +2,80 @@
  * Outline all classes.
  */
 [class] {
-  outline: 5px solid lightgrey;
+	outline: 5px solid lightgrey;
 }
 
 /**
  * Outline all BEM Elements.
  */
-[class*="__"] {
-  outline: 5px solid grey;
+[class*='__'] {
+	outline: 5px solid grey;
 }
 
 /**
  * Outline all BEM Modifiers.
  */
-[class*="--"] {
-  outline: 5px solid darkgrey;
+[class*='--'] {
+	outline: 5px solid darkgrey;
 }
 
 /**
  * Outline all Object classes.
  */
-[class^="o-"],
-[class*=" o-"] {
-  outline: 5px solid orange;
+[class^='o-'],
+[class*=' o-'] {
+	outline: 5px solid orange;
 }
 
 /**
  * Outline all Component classes.
  */
-[class^="c-"],
-[class*=" c-"] {
-  outline: 5px solid cyan;
+[class^='c-'],
+[class*=' c-'] {
+	outline: 5px solid cyan;
 }
 
 /**
  * Outline all Responsive classes.
  */
-[class*="@"] {
-  outline: 5px solid rosybrown;
+[class*='@'] {
+	outline: 5px solid rosybrown;
 }
 
 /**
  * Outline all Hack classes.
  */
-[class^="_"] {
-  outline: 5px solid red;
+[class^='_'] {
+	outline: 5px solid red;
+}
+
+/**
+ * Outline all Object classes.
+ */
+[class^='o-'],
+[class*=' o-'] {
+	outline: 5px solid orange;
+}
+/**
+ * Outline all Component classes.
+ */
+[class^='c-'],
+[class*=' c-'] {
+	outline: 5px solid cyan;
+}
+
+/**
+ * Outline all Utility classes.
+ */
+[class^='u-'],
+[class*=' u-'] {
+	outline: 5px solid violet;
+}
+
+/**
+ * Outline all Hack classes.
+ */
+[class^='_'],
+[class*=' _'] {
+	outline: 5px solid red;
 }
