--- a/index.css
+++ b/index.css
@@ -17,10 +17,10 @@ html {
 }
 
 /* Remove default padding */
-ul[class],
+/* ul[class],
 ol[class] {
 	padding: 0;
-}
+} */
 
 /* Remove default margin */
 body,
