--- a/Friend List/Friend List.css
+++ b/Friend List/Friend List.css
@@ -9,42 +9,54 @@
 .o-section-container {
 	display: flex;
 	flex-direction: column;
-	justify-content: center;
-	align-items: center;
+	justify-content: start;
+	align-items: start;
 	width: 80%;
+	margin: 2rem 0;
 }
 
-.user-profile {
-	display: flex;
-	flex-direction: column;
-	justify-content: center;
-	align-items: center;
-	height: 100%;
+.o-page-heading {
+	margin-bottom: 1rem;
 }
 
-.user-profile__content {
-	display: flex;
-	flex-direction: column;
-	justify-content: center;
-	align-items: center;
-	background-color: var(--Eggshell);
-	width: 80%;
-	height: 90%;
-}
-
-.c-user {
+.o-page-body {
 	display: flex;
 	justify-content: start;
-	align-items: center;
-	width: 500px;
+	align-items: start;
+	width: 100%;
+	height: 100%;
 	background-color: var(--Eggshell);
-	height: 6rem;
+	border: 1px solid var(--Dark-Smoke);
 }
 
-.c-user__avatar {
-	margin: 0.5rem;
-	height: 5rem;
-	width: 5rem;
+.o-friend-list {
+	padding: 1rem;
+	display: flex;
+	justify-content: start;
+	flex-wrap: wrap;
+}
+.o-friend-list__item {
+	padding: 0.5rem;
+}
+
+.c-page-heading {
+	color: var(--Cadet-Blue);
+}
+
+.c-mini-user {
+	display: flex;
+	flex-direction: column;
+	justify-content: space-evenly;
+	align-items: center;
+	width: 8rem;
+	height: 8rem;
+	background-color: var(--English-Green);
+	border: 1px solid var(--Charlston-Green);
+}
+
+.c-mini-user__avatar {
+	height: 3.5rem;
+	width: 3.5rem;
 	border-radius: 50%;
 	background-image: url('../Images/ChloeAvatar.jpg');
 	background-size: cover;
@@ -52,17 +64,13 @@
 	background-position: center;
 }
 
-.c-user__info {
-	margin: 0.5rem;
-	padding: 0.5rem;
-	height: 5rem;
-	width: 80%;
-	display: flex;
-	flex-direction: column;
-	justify-content: center;
+.c-mini-user__info {
+	height: 3rem;
+	overflow: hidden;
 }
 
-.c-user__fullname {
-	line-height: 2rem;
+.c-mini-user__fullname {
+	font-size: 1rem;
 	text-align: center;
+	color: var(--Honeydew);
 }
